@@ -1,3 +1,10 @@
+2010-09-16  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/43665
+	* gfortran.dg/cray_pointers_2.f90: Disable inlining to avoid
+	optimizations.
+	* gfortran.dg/intent_optimize_1.f90: New test.
+
 2010-09-16  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* gcc.target/i386/divmod-1.c: New.
